app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 224 71.4% 4.1%;
    --card: 0 0% 100%;
    --card-foreground: 224 71.4% 4.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 224 71.4% 4.1%;
    /*--primary: 152, 100%, 50%;*/
    --primary: 174.05deg 100% 50%;
    --primary-foreground: 210 20% 98%;
    --secondary: 220 14.3% 95.9%;
    --secondary-foreground: 220.9 39.3% 11%;
    --muted: 220 14.3% 95.9%;
    --muted-foreground: 220 8.9% 46.1%;
    --accent: 220 14.3% 95.9%;
    --accent-foreground: 220.9 39.3% 11%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 20% 98%;
    --border: 220 13% 91%;
    --input: 220 13% 91%;
    --ring: 224 71.4% 4.1%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .dark {
    --background: 240, 34%, 14%;
    --foreground: 210 20% 98%;
    --card: 224 71.4% 4.1%;
    --card-foreground: 210 20% 98%;
    --popover: 224 71.4% 4.1%;
    --popover-foreground: 210 20% 98%;
    /*--primary: 152, 100%, 50%;*/
    --primary: 174.05deg 100% 50%;
    --primary-foreground: 220.9 39.3% 11%;
    --secondary: 215 27.9% 16.9%;
    --secondary-foreground: 210 20% 98%;
    --muted: 215 27.9% 16.9%;
    --muted-foreground: 244.3, 6.4%, 56.9%;
    --accent: 215 27.9% 16.9%;
    --accent-foreground: 210 20% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 20% 98%;
    --border: 215 27.9% 16.9%;
    --input: 215 27.9% 16.9%;
    --ring: 216 12.2% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;

    --base-700: 240, 34%, 12%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.font-display {
  font-feature-settings: "salt" on, "aalt" on, "ss01" on;
}

.font-mono {
  font-synthesis-weight: none;
  font-feature-settings: "ss04" on, "aalt" off;
  font-variant-numeric: tabular-nums;
}

@layer layout {
  @tailwind base;

  :root {
    --wg-viewport-width: 99svw;
    --grid-border: 240, 18.3%, 22.5%;
  }

  .wg-row {
    @apply items-stretch flex;

    & > .wg-cell {
      @apply flex shrink-0 box-border items-center border-r border-grid-border;

      *[class*="debug"] & {
        @apply border border-white;
      }

      &:last-child {
        border-right: 0;
      }
      & .fill {
      }
    }
  }

  .wg-column {
    & > * {
      @apply border-b border-grid-border;

      &:last-child {
        border-bottom: 0;
      }
    }
  }
}

:root {
  --scanline-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAGklEQVR4Aa3IIQEAAADCsPcvDddoJgcjuocKFosT7bLfmPAAAAAASUVORK5CYII=);
}

.scanline-root {
  /*--scanline-image: "";*/

  & .scanline-container {
    @apply overflow-hidden;

    &:before {
      @apply absolute inset-0 z-[-1] transform translate-y-1;

      content: "";
      display: block;
      background-image: var(--scanline-image);
      background-repeat: repeat;
      background-blend-mode: soft-light;
      opacity: 0;
      transition-timing-function: ease-in;
      transition-duration: 400ms;
    }
  }

  &:hover .scanline-container::before {
    @apply translate-y-0;
    opacity: 0.1;
  }
}

.flat-button {
  position: relative;

  & > span {
    position: relative;
    z-index: 20;
  }

  &:before {
    @apply absolute inset-x-0 top-[100%] bottom-0 bg-primary z-[-10] will-change-transform transition-all;

    content: "";
    display: block;
  }

  &:hover,
  &:focus {
    color: hsl(var(--background));
    o &::before {
      @apply top-0;
    }
  }
}

*::selection {
  background-color: hsl(var(--primary));
  color: hsl(var(--background));
}

.bg-pixelate {
  background-image: radial-gradient(
    rgba(0, 0, 0, 0) 2px,
    hsl(var(--background)) 2px
  );
  background-size: 6px 6px;
}

